--- a/my_history.html
+++ b/my_history.html
@@ -10,8 +10,8 @@
         <title>My_history</title>
     </head>
         <body>
+            <main>
             <div id="site_header"></div>
-            <script>$("#site_header").load("based_header.html");</script>
             <h1>Кто я такой?</h1>
 
             <h2>Привет, меня зовут Илюха</h2>
@@ -170,7 +170,8 @@
             телеграме)
             Что касается блогов, то посты стараюсь писать регулярно, делиться
             всеми инсайтами и умными мыслями, так что ничего не пропустите
-
+            </main>
         </body>
+        <script>$("#site_header").load("based_header.html");</script>
     </html>
 </main>
