--- a/home.html
+++ b/home.html
@@ -11,59 +11,62 @@
     </head>
         <body>
             <div id="site_header"></div>
-            <div>
-                <h1>Сеть блогов</h1>
-                <h3>Привет, меня зовут Илюха!</h3>
-                Я предприниматель, блогер и просто медийная личность
-                За свою жизнь я уже многое перепробовал и нашёл истинное
-                призвание! Решил, что глупо молчать о об этом.
-                *Более подробно обо мне и моём становлении можете прочитать
-                тут(ссылк на страницу My_history)
-            </div>
+            <main>
+                <div>
+                    <h1>Сеть блогов</h1>
+                    <h3>Привет, меня зовут Илюха!</h3>
+                    Я предприниматель, блогер и просто медийная личность
+                    За свою жизнь я уже многое перепробовал и нашёл истинное
+                    призвание! Решил, что глупо молчать о об этом.
+                    *Более подробно обо мне и моём становлении можете прочитать
+                    тут(ссылк на страницу My_history)
+                </div>
 
-            <!-- Видео обложка -->
-            <div></div>
+                <!-- Видео обложка -->
+                <div></div>
 
-            <div>
-                <h2>Хочу представить Вам свою сеть блогов</h2>
-                Вконтакте
-                В VK у меня всего 3 блога:
-                💵Основной (про бизнес и саморазвитие)
-                https://vk.com/lifeandbzns
-                🎹Музыкальный (о моей фортепианной карьере)
-                https://vk.com/bandwprince
-                🏀Баскетбольный (клуб настоящих боллеров)
-                https://vk.com/bballmovement
-                Каждый отражает отдельную частичку моей жизни и показывает
-                всё без розовых очков (успешного успеха не будет, уверяю вас😜)
-                Считаю, что благодаря такому подходу я могу показать людям
-                лишь то, что им действительно важно и нужно!!!
-                Не всем допустим интересен бизнес или баскетбол…
-            </div>
+                <div>
+                    <h2>Хочу представить Вам свою сеть блогов</h2>
+                    Вконтакте
+                    В VK у меня всего 3 блога:
+                    💵Основной (про бизнес и саморазвитие)
+                    <a href="https://vk.com/lifeandbzns">https://vk.com/lifeandbzns</a>
+                    🎹Музыкальный (о моей фортепианной карьере)
+                    <a href="https://vk.com/bandwprince">https://vk.com/bandwprince</a>
+                    🏀Баскетбольный (клуб настоящих боллеров)
+                    <a href="https://vk.com/bballmovement">https://vk.com/bballmovement</a>
+                    Каждый отражает отдельную частичку моей жизни и показывает
+                    всё без розовых очков (успешного успеха не будет, уверяю вас😜)
+                    Считаю, что благодаря такому подходу я могу показать людям
+                    лишь то, что им действительно важно и нужно!!!
+                    Не всем допустим интересен бизнес или баскетбол…
+                </div>
 
-            <div>
-                <h2>Телеграм</h2>
-                Блог о жизни (связанный с Основным из ВК)
-                Здесь публикую более эксклюзивную информацию о типичных
-                бытовых вопросах и всевозможных передрягах
-                Экспертных и познавательных постов тут немного…
-                https://t.me/lifeandbzns
-            </div>
+                <div>
+                    <h2>Телеграм</h2>
+                    Блог о жизни (связанный с Основным из ВК)
+                    Здесь публикую более эксклюзивную информацию о типичных
+                    бытовых вопросах и всевозможных передрягах
+                    Экспертных и познавательных постов тут немного…
+                    https://t.me/lifeandbzns
+                </div>
 
-            <img src="static/img/TelegramBlogImg.jpg" alt="Мой блог в telegram">
+                <img src="static/img/TelegramBlogImg.jpg" alt="Мой блог в telegram">
 
-            <div>
-                <h2>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h2>
-                Моя жизнь в красках…
-                    https://vk.com/littlemachine
-                ОСТОРОЖНО
-                Никакой полезной информации…только фото и видео контент
-            </div>
+                <div>
+                    <h2>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h2>
+                    Моя жизнь в красках…
+                    <a href="https://vk.com/littlemachine">https://vk.com/littlemachine</a>
+                    ОСТОРОЖНО
+                    Никакой полезной информации…только фото и видео контент
+                </div>
 
-            <img src="static/img/MyVkImg.jpg" alt="">
+                <img src="static/img/MyVkImg.jpg" alt="">
 
-            <!-- Пустой div -->
-            <div></div>
+                <!-- Пустой div -->
+                <div></div>
+            </main>
+            <div id="site_footer"></div>
         </body>
         <script>$("#site_header").load("based_header.html");</script>
     </html>
