--- a/based_header.html
+++ b/based_header.html
@@ -1,14 +1,16 @@
 
 <header class="header">
     <div class="logo">
+        <h1 class="site-title"><a>Илюха</a></h1>
+        <p class="site-descrirtion">сеть блогов</p>
     </div>
     <nav>
         <ul class="nav_list">
             <li class="nav_item">
-                <a href="#" class="nav_link">Главная</a>
+                <a href="home.html" class="nav_link">Главная</a>
             </li>
             <li class="nav_item">
-                <a href="about_me.html" class="nav_link">Обо мне</a>
+                <a href="my_history.html" class="nav_link">Обо мне</a>
             </li>
             <li class="nav_item">
                 <a href="#" class="nav_link">Блоги</a>
