--- a/based_footer.html
+++ b/based_footer.html
@@ -1,4 +1,11 @@
 <footer class="footer">
     <div classs="useful_links">
+        <ul class="social-icons">
+            <li><a href="#"><i class="fa fa-vk"></i></a></li>
+            <li><a href="#"><i class="fa fa-vk"></i></a></li>
+            <li><a href="#"><i class="fa fa-telegram"></i></a></li>
+            <li><a href="#"><i class="fa fa-vk"></i></a></li>
+            <li><a href="#"><i class="fa fa-vk"></i></a></li>
+        </ul>
     </div>
 </footer>
