--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" />
         <link rel="stylesheet" href="static/css/style.css">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <title>Home</title>
@@ -12,62 +13,79 @@
         <body>
             <div id="site_header"></div>
             <main>
-                <div>
-                    <h1>Сеть блогов</h1>
+                <div class="block-container">
+                    <h2>Сеть блогов</h2>
                     <h3>Привет, меня зовут Илюха!</h3>
+                    <p>
                     Я предприниматель, блогер и просто медийная личность
                     За свою жизнь я уже многое перепробовал и нашёл истинное
                     призвание! Решил, что глупо молчать о об этом.
-                    *Более подробно обо мне и моём становлении можете прочитать
-                    тут(ссылк на страницу My_history)
+                    </p>
+                    <p>Так я создал свою сеть блогов, в которой делюсь наработками, инсайтами и просто удивительным лайфстайлом!</p>
+                    <p>Благодаря своей чёткой структуре каждый сможет найти в ней что-то для себя и своих интересов</p>
+                    <p>Ну всё... Хватит предисловий...</p>
                 </div>
 
-                <!-- Видео обложка -->
-                <div></div>
+                <div class="vk_reels"><iframe class="link_vk_reels" src="https://vk.com/video_ext.php?oid=-215415663&id=456239034&hash=7b15a6c8968f85a3" width="333" height="660" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
 
-                <div>
+                <div class="block_container">
                     <h2>Хочу представить Вам свою сеть блогов</h2>
-                    Вконтакте
-                    В VK у меня всего 3 блога:
-                    💵Основной (про бизнес и саморазвитие)
-                    <a href="https://vk.com/lifeandbzns">https://vk.com/lifeandbzns</a>
-                    🎹Музыкальный (о моей фортепианной карьере)
-                    <a href="https://vk.com/bandwprince">https://vk.com/bandwprince</a>
-                    🏀Баскетбольный (клуб настоящих боллеров)
-                    <a href="https://vk.com/bballmovement">https://vk.com/bballmovement</a>
+                    <h3>Вконтакте</h3>
+                    <p>В VK у меня всего 3 блога:</p>
+                    <ul class="blogs_list">
+                        <li>💵<a href="https://vk.com/lifeandbzns">Основной</a>(про бизнес и саморазвитие)</li>
+                        <li>🎹<a href="https://vk.com/bandwprince">Музыкальный</a>(о моей фортепианной карьере)</li>
+                        <li>🏀<a href="https://vk.com/bballmovement">Баскетбольный</a>(клуб настоящих боллеров)</li>
+                    </ul>
+                    <p>
                     Каждый отражает отдельную частичку моей жизни и показывает
                     всё без розовых очков (успешного успеха не будет, уверяю вас😜)
+                    </p>
+                    <p>
                     Считаю, что благодаря такому подходу я могу показать людям
                     лишь то, что им действительно важно и нужно!!!
+                    </p>
+                    <p>
                     Не всем допустим интересен бизнес или баскетбол…
+                    </p>
                 </div>
 
-                <div>
-                    <h2>Телеграм</h2>
-                    Блог о жизни (связанный с Основным из ВК)
-                    Здесь публикую более эксклюзивную информацию о типичных
-                    бытовых вопросах и всевозможных передрягах
-                    Экспертных и познавательных постов тут немного…
-                    https://t.me/lifeandbzns
+                <div class="block_container">
+                    <h3>Телеграм</h3>
+                    <div class="flexible_container">
+                        <img src="static/img/TelegramBlogImg.jpg" alt="Мой блог в telegram" height="450px" width="400px">
+                        <div class="indentation_element">
+                            <p>Блог о жизни (связанный с Основным из ВК)</p>
+                            <p>Здесь публикую более эксклюзивную информацию о типичных
+                            бытовых вопросах и всевозможных передрягах</p>
+                            <p>Экспертных и познавательных постов тут немного…
+                            <a href="https://t.me/lifeandbzns">https://t.me/lifeandbzns</a></p>
+                        </div>
+                    </div>
                 </div>
 
-                <img src="static/img/TelegramBlogImg.jpg" alt="Мой блог в telegram">
 
-                <div>
-                    <h2>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h2>
-                    Моя жизнь в красках…
-                    <a href="https://vk.com/littlemachine">https://vk.com/littlemachine</a>
-                    ОСТОРОЖНО
-                    Никакой полезной информации…только фото и видео контент
+                <div class="block_container">
+                    <h3>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h3>
+                    <div class="flexible_container">
+                        <img src="static/img/MyVkImg.jpg" alt="">
+                        <div class="indentation_element">
+                            <p>Моя жизнь в красках…</p>
+                            <a href="https://vk.com/littlemachine">https://vk.com/littlemachine</a>
+                            <p>ОСТОРОЖНО</p>
+                            <p>Никакой полезной информации…только фото и видео контент</p>
+                        </div>
+                    </div>
                 </div>
-
-                <img src="static/img/MyVkImg.jpg" alt="">
 
                 <!-- Пустой div -->
-                <div></div>
+                <div>
+                    <p>На этом, собственно, всё! Выбирайте интересные Вам направления и добро пожаловать в мой мир...</p>
+                </div>
             </main>
             <div id="site_footer"></div>
         </body>
         <script>$("#site_header").load("based_header.html");</script>
+        <script>$("#site_footer").load("based_footer.html");</script>
     </html>
 </main>
