--- a/based_header.html
+++ b/based_header.html
@@ -13,13 +13,13 @@
                 <a href="my_history.html" class="nav_link">Обо мне</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Блоги</a>
+                <a href="blogs.html" class="nav_link">Блоги</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Подарки</a>
+                <a href="bonuses.html" class="nav_link">Подарки</a>
             </li>
             <li class="nav_item">
-                <a href="#" class="nav_link">Магазины</a>
+                <a href="shops.html" class="nav_link">Магазины</a>
             </li>
         </ul>
     </nav>
