--- a/bonuses.html
+++ b/bonuses.html
@@ -2,14 +2,31 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>No name</title>
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" />
         <link rel="stylesheet" href="static/css/style.css">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <title>Бонусы</title>
     </head>
     <body>
         <div id="site_header"></div>
-        <script>$("#site_header").load("based_header.html");</script>
-        <main></main>
-        <footer></footer>
+        <main>
+            <div class="block-container">
+                <h2><Бонусы</h2>
+                <p>Понимая, как все любят бесплатные гайды, подборки и подарки, сделал для 
+                Вас специальную страничку с бонусами!</p>
+                <p>Пользуйтесь</p>
+                <ul>
+                    <li></li>
+                    <li></li>
+                </ul>
+                <p>*Обратную связь по продуктам можете оставить <a href="https://vk.com/feedback_app?mid=-215415663">здесь</a></p>
+            </div>
+        </main>
+        <footer id="site_footer"></footer>
     </body>
+    <script>$("#site_header").load("based_header.html");</script>
+    <script>$("#site_footer").load("based_footer.html");</script>
 </html>
