--- a/blogs.html
+++ b/blogs.html
@@ -5,15 +5,30 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" />
+        <link rel="stylesheet" href="static/css/style.css">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <title>Blogs</title>
     </head>
         <body>
-            Text
-            <img src="" alt="">
-            Text
-            Text
-            Text
-            Text
+            <div id="site_header"></div>
+            <main>
+                <div class="block_container">
+                    <h2>Мои болги</h2>
+                    <img src="static/img/StructureBlogs.jpg" alt="" width="500px" height="330px">
+                    <p>Тематика:</p>
+                    <ul class="blogs_list">
+                        <li><a href="https://vk.com/lifeandbzns">Илюха | Жизнь и бизнес</a></li>
+                        <li><a href="https://vk.com/bandwprince">Илюха | Чёрно-белый принц</a></li>
+                        <li><a href="https://vk.com/bballmovement">Илюха | Баскетбольный движ</a></li>
+                        <li><a href="https://vk.com/littlemachine">Личная страница </a></li>
+                        <li><a href="https://t.me/lifeandbzns">Эксклюзивный телеграм</a></li>
+                    </ul>
+                </div>
+            </main>
+            <div id="site_footer"></div>
         </body>
+        <script>$("#site_header").load("based_header.html");</script>
+        <script>$("#site_footer").load("based_footer.html");</script>
     </html>
 </main>
