--- a/shops.html
+++ b/shops.html
@@ -2,14 +2,31 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>No name</title>
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" />
         <link rel="stylesheet" href="static/css/style.css">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <title>Магазины</title>
     </head>
     <body>
         <div id="site_header"></div>
-        <script>$("#site_header").load("based_header.html");</script>
-        <main></main>
-        <footer></footer>
+        <main>
+            <div class="block_container">
+                <h2>Магазины</h2>
+                <p>Здесь вы можете ознакомиться с моими Интернет-магазинами, а также 
+                    приобрести интересующие товары или мерч:</p>
+                <ul>
+                    <li><a href="https://vk.com/lionstoys">Магазин игрушек</a></li>
+                    <li><a href="https://vk.com/lionsbricks">Магазин конструкторов</a></li>
+                </ul>
+                <p>Мерч: В разработке...</p>
+                <p>Нотный маркетплейс: В разработке...</p>
+            </div>
+        </main>
+        <footer id="site_footer"></footer>
     </body>
+    <script>$("#site_header").load("based_header.html");</script>
+    <script>$("#site_footer").load("based_footer.html");</script>
 </html>
