--- a/based_header.html
+++ b/based_header.html
@@ -2,7 +2,7 @@
 <header class="header">
     <div class="logo">
         <h1 class="site-title"><a>Илюха</a></h1>
-        <p class="site-descrirtion">сеть блогов</p>
+        <p class="site-description">сеть блогов</p>
     </div>
     <nav>
         <ul class="nav_list">
