--- a/blogs.html
+++ b/blogs.html
@@ -1,5 +1,5 @@
-<main>
-    <html>
+<!DOCTYPE html>
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
@@ -10,25 +10,28 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <title>Blogs</title>
     </head>
-        <body>
-            <div id="site_header"></div>
-            <main>
-                <div class="block_container">
-                    <h2>Мои болги</h2>
-                    <img src="static/img/StructureBlogs.jpg" alt="" width="500px" height="330px">
-                    <p>Тематика:</p>
-                    <ul class="blogs_list">
-                        <li><a href="https://vk.com/lifeandbzns">Илюха | Жизнь и бизнес</a></li>
-                        <li><a href="https://vk.com/bandwprince">Илюха | Чёрно-белый принц</a></li>
-                        <li><a href="https://vk.com/bballmovement">Илюха | Баскетбольный движ</a></li>
-                        <li><a href="https://vk.com/littlemachine">Личная страница </a></li>
-                        <li><a href="https://t.me/lifeandbzns">Эксклюзивный телеграм</a></li>
-                    </ul>
-                </div>
-            </main>
-            <div id="site_footer"></div>
-        </body>
-        <script>$("#site_header").load("based_header.html");</script>
-        <script>$("#site_footer").load("based_footer.html");</script>
-    </html>
-</main>
+    <body>
+        <div class="background-design">
+        <div id="site_header"></div>
+        <main>
+            <div class="block_container">
+                <h2>Мои болги</h2>
+                <img src="static/img/StructureBlogs.jpg" alt="" class="picture-on-center" width="800px" height="450px">
+            </div>
+            <div class="block_container">
+                <h3>Тематика:</h3>
+                <ul class="blogs_list useful_links">
+                    <li><a href="https://vk.com/lifeandbzns">Илюха | Жизнь и бизнес</a></li>
+                    <li><a href="https://vk.com/bandwprince">Илюха | Чёрно-белый принц</a></li>
+                    <li><a href="https://vk.com/bballmovement">Илюха | Баскетбольный движ</a></li>
+                    <li><a href="https://vk.com/littlemachine">Личная страница </a></li>
+                    <li><a href="https://t.me/lifeandbzns">Эксклюзивный телеграм</a></li>
+                </ul>
+            </div>
+        </main>
+        <div id="site_footer"></div>
+        </div>
+    </body>
+    <script>$("#site_header").load("based_header.html");</script>
+    <script>$("#site_footer").load("based_footer.html");</script>
+</html>
