--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
-<main>
-    <html>
+<!DOCTYPE html>
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport"
@@ -10,82 +10,76 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <title>Home</title>
     </head>
-        <body>
-            <div id="site_header"></div>
-            <main>
-                <div class="block-container">
-                    <h2>Сеть блогов</h2>
-                    <h3>Привет, меня зовут Илюха!</h3>
-                    <p>
-                    Я предприниматель, блогер и просто медийная личность
-                    За свою жизнь я уже многое перепробовал и нашёл истинное
-                    призвание! Решил, что глупо молчать о об этом.
-                    </p>
-                    <p>Так я создал свою сеть блогов, в которой делюсь наработками, инсайтами и просто удивительным лайфстайлом!</p>
-                    <p>Благодаря своей чёткой структуре каждый сможет найти в ней что-то для себя и своих интересов</p>
-                    <p>Ну всё... Хватит предисловий...</p>
-                </div>
+    <body>
+        <div class="background-design">
+        <div id="site_header"></div>
+        <main>
+            <div class="block-container">
+                <h2>Сеть блогов</h2>
+                <h3>Привет, меня зовут Илюха!</h3>
+                <p>
+                Я предприниматель, блогер и просто медийная личность. <br>
+                За свою жизнь я уже многое перепробовал и нашёл истинное
+                призвание! Решил, что глупо молчать о об этом. <br>
+                Так я создал свою сеть блогов, в которой делюсь наработками, инсайтами и просто удивительным лайфстайлом! <br>
+                Благодаря своей чёткой структуре каждый сможет найти в ней что-то для себя и своих интересов. <br>
+                Ну всё... Хватит предисловий...
+                </p>
+                <h2>Хочу представить Вам свою сеть блогов</h2>
+            </div>
 
-                <div class="vk_reels"><iframe class="link_vk_reels" src="https://vk.com/video_ext.php?oid=-215415663&id=456239034&hash=7b15a6c8968f85a3" width="333" height="660" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
+            <div class="vk_reels"><iframe class="link_vk_reels" src="https://vk.com/video_ext.php?oid=-215415663&id=456239034&hash=7b15a6c8968f85a3" width="333" height="660" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
 
-                <div class="block_container">
-                    <h2>Хочу представить Вам свою сеть блогов</h2>
-                    <h3>Вконтакте</h3>
-                    <p>В VK у меня всего 3 блога:</p>
-                    <ul class="blogs_list">
-                        <li>💵<a href="https://vk.com/lifeandbzns">Основной</a>(про бизнес и саморазвитие)</li>
-                        <li>🎹<a href="https://vk.com/bandwprince">Музыкальный</a>(о моей фортепианной карьере)</li>
-                        <li>🏀<a href="https://vk.com/bballmovement">Баскетбольный</a>(клуб настоящих боллеров)</li>
-                    </ul>
-                    <p>
-                    Каждый отражает отдельную частичку моей жизни и показывает
-                    всё без розовых очков (успешного успеха не будет, уверяю вас😜)
-                    </p>
-                    <p>
-                    Считаю, что благодаря такому подходу я могу показать людям
-                    лишь то, что им действительно важно и нужно!!!
-                    </p>
-                    <p>
-                    Не всем допустим интересен бизнес или баскетбол…
-                    </p>
-                </div>
-
-                <div class="block_container">
-                    <h3>Телеграм</h3>
-                    <div class="flexible_container">
-                        <img src="static/img/TelegramBlogImg.jpg" alt="Мой блог в telegram" height="450px" width="400px">
-                        <div class="indentation_element">
-                            <p>Блог о жизни (связанный с Основным из ВК)</p>
-                            <p>Здесь публикую более эксклюзивную информацию о типичных
-                            бытовых вопросах и всевозможных передрягах</p>
-                            <p>Экспертных и познавательных постов тут немного…
-                            <a href="https://t.me/lifeandbzns">https://t.me/lifeandbzns</a></p>
-                        </div>
+            <div class="block_container">
+                <h3>Вконтакте</h3>
+                <div class="flexible_container">
+                    <img src="static/img/VkBlogs.jpg" alt="Блоги в вк" height="400px" width="600px">
+                    <div class="indentation_element">
+                        <p>В VK у меня всего 3 блога:</p>
+                        <ul class="blogs_list">
+                            <li class="blogs_list_item">💵<a href="https://vk.com/lifeandbzns">Основной</a> (про бизнес и саморазвитие)</li>
+                            <li class="blogs_list_item">🎹<a href="https://vk.com/bandwprince">Музыкальный</a> (о моей фортепианной карьере)</li>
+                            <li>🏀<a href="https://vk.com/bballmovement">Баскетбольный</a> (клуб настоящих боллеров)</li>
+                        </ul>
+                        <p>
+                        Каждый отражает отдельную частичку моей жизни и показывает всё без розовых очков (успешного успеха не будет, уверяю вас😜)</p>
+                        <p>Считаю, что благодаря такому подходу я могу показать людям лишь то, что им действительно важно и нужно!!!</p>
+                        <p>Не всем допустим интересен бизнес или баскетбол…
+                        </p>
                     </div>
                 </div>
+            </div>
 
-
-                <div class="block_container">
-                    <h3>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h3>
-                    <div class="flexible_container">
-                        <img src="static/img/MyVkImg.jpg" alt="">
-                        <div class="indentation_element">
-                            <p>Моя жизнь в красках…</p>
-                            <a href="https://vk.com/littlemachine">https://vk.com/littlemachine</a>
-                            <p>ОСТОРОЖНО</p>
-                            <p>Никакой полезной информации…только фото и видео контент</p>
-                        </div>
+            <div class="block_container">
+                <div class="flexible_container expansion">
+                    <div class="left-container">
+                        <h3>Телеграм</h3>
+                        <p>Блог о жизни (связанный с Основным из ВК)</p>
+                        <p>Здесь публикую более эксклюзивную информацию о типичных
+                        бытовых вопросах и всевозможных передрягах</p>
+                        <p>Экспертных и познавательных постов <a href="https://t.me/lifeandbzns">тут</a> немного...</p>
+                    </div>
+                    <div class="right-container">
+                        <h3>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h3>
+                        <p><a href="https://vk.com/littlemachine">Моя жизнь в красках...</a></p>
+                        <p>ОСТОРОЖНО</p>
+                        <p>Никакой полезной информации…только фото и видео контент</p>
                     </div>
                 </div>
-
-                <!-- Пустой div -->
-                <div>
-                    <p>На этом, собственно, всё! Выбирайте интересные Вам направления и добро пожаловать в мой мир...</p>
+                <div class="flexible_container expansion">
+                    <div class="left-container">
+                        <img src="static/img/TelegramBlogImg.jpg" alt="Мой блог в telegram" height="550px" width="450px">
+                    </div>
+                    <div class="right-container">
+                        <img src="static/img/MyVkImg.jpg" alt="Личная страница вк" height="550px" width="450px">
+                    </div>
                 </div>
-            </main>
-            <div id="site_footer"></div>
-        </body>
-        <script>$("#site_header").load("based_header.html");</script>
-        <script>$("#site_footer").load("based_footer.html");</script>
-    </html>
-</main>
+            </div>
+            <p class="bold-text">На этом, собственно, всё! Выбирайте интересные Вам направления и добро пожаловать в мой мир...</p>
+        </main>
+        <div id="site_footer"></div>
+        </div>
+    </body>
+    <script>$("#site_header").load("based_header.html");</script>
+    <script>$("#site_footer").load("based_footer.html");</script>
+</html>
