--- a/shops.html
+++ b/shops.html
@@ -11,21 +11,23 @@
         <title>Магазины</title>
     </head>
     <body>
+        <div class="background-design">
         <div id="site_header"></div>
         <main>
             <div class="block_container">
                 <h2>Магазины</h2>
                 <p>Здесь вы можете ознакомиться с моими Интернет-магазинами, а также 
                     приобрести интересующие товары или мерч:</p>
-                <ul>
-                    <li><a href="https://vk.com/lionstoys">Магазин игрушек</a></li>
-                    <li><a href="https://vk.com/lionsbricks">Магазин конструкторов</a></li>
+                <ul class="useful_links ">
+                    <li class="useful_link"><a href="https://vk.com/lionstoys">Магазин игрушек</a></li>
+                    <li class="useful_link"><a href="https://vk.com/lionsbricks">Магазин конструкторов</a></li>
                 </ul>
                 <p>Мерч: В разработке...</p>
                 <p>Нотный маркетплейс: В разработке...</p>
             </div>
         </main>
         <footer id="site_footer"></footer>
+        </div>
     </body>
     <script>$("#site_header").load("based_header.html");</script>
     <script>$("#site_footer").load("based_footer.html");</script>
