--- a/blogs.html
+++ b/blogs.html
@@ -11,7 +11,6 @@
         <title>Blogs</title>
     </head>
     <body>
-        <div class="background-design">
         <div id="site_header"></div>
         <main>
             <div class="block_container">
@@ -21,16 +20,15 @@
             <div class="block_container">
                 <h3>Тематика:</h3>
                 <ul class="blogs_list useful_links">
-                    <li><a href="https://vk.com/lifeandbzns">Илюха | Жизнь и бизнес</a></li>
-                    <li><a href="https://vk.com/bandwprince">Илюха | Чёрно-белый принц</a></li>
-                    <li><a href="https://vk.com/bballmovement">Илюха | Баскетбольный движ</a></li>
-                    <li><a href="https://vk.com/littlemachine">Личная страница </a></li>
-                    <li><a href="https://t.me/lifeandbzns">Эксклюзивный телеграм</a></li>
+                    <li><a href="https://vk.com/lifeandbzns" class="link-design">Илюха | Жизнь и бизнес</a></li>
+                    <li><a href="https://vk.com/bandwprince" class="link-design">Илюха | Чёрно-белый принц</a></li>
+                    <li><a href="https://vk.com/bballmovement" class="link-design">Илюха | Баскетбольный движ</a></li>
+                    <li><a href="https://vk.com/littlemachine" class="link-design">Личная страница </a></li>
+                    <li><a href="https://t.me/lifeandbzns" class="link-design">Эксклюзивный телеграм</a></li>
                 </ul>
             </div>
         </main>
         <div id="site_footer"></div>
-        </div>
     </body>
     <script>$("#site_header").load("based_header.html");</script>
     <script>$("#site_footer").load("based_footer.html");</script>
