--- a/bonuses.html
+++ b/bonuses.html
@@ -11,7 +11,6 @@
         <title>Бонусы</title>
     </head>
     <body>
-        <div class="background-design">
         <div id="site_header"></div>
         <main>
             <div class="block-container">
@@ -21,23 +20,22 @@
                 <p>Пользуйтесь</p>
                 <p>✅2 WORD-ФАЙЛА:</p>
                 <ul class="useful_links">
-                    <li class="useful_link"><a href="https://vk.com/doc194326000_666854255?hash=u4ic3kDHKOHo5ALDuWxd61C8mNxQIoRso3qBeVb24OP&dl=1MXYUB3kcAR0tKywGUZEB6iL0aiXpMWY2oQz989J0mT">Как начать бизнес с 0</a></li>
-                    <li class="useful_link"><a href="https://vk.com/doc194326000_666854256?hash=DOilSNKeqnQ8kYmNZQoPoxaidLOZl2EEE06IiXyZs3T&dl=kSLckSUr6rzfY4l1zPWzWZzsJjQT4exxDYzdqhU8ZCL">Как начать инвестировать</a></li>
-                </ul>
+                    <li class="useful_link"><a href="https://vk.com/doc194326000_666854255?hash=u4ic3kDHKOHo5ALDuWxd61C8mNxQIoRso3qBeVb24OP&dl=1MXYUB3kcAR0tKywGUZEB6iL0aiXpMWY2oQz989J0mT" class="link-design">Как начать бизнес с 0</a></li>
+                    <li class="useful_link"><a href="https://vk.com/doc194326000_666854256?hash=DOilSNKeqnQ8kYmNZQoPoxaidLOZl2EEE06IiXyZs3T&dl=kSLckSUr6rzfY4l1zPWzWZzsJjQT4exxDYzdqhU8ZCL" class="link-design">Как начать инвестировать</a></li>
+                </ul> 
                 <p>✅ТАБЛИЦА "ЛИЧНЫЙ БЮДЖЕТ" 3 ВЕРСИИ:</p>
                     <ul class="useful_links ">
-                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854236?hash=hwXv7ikhU8zKDZ5uD8Mo1LNu0KERZJc3Cxn15bIOt9H&dl=1NSuL87A0ZS0x75lR7uyvxVKWz6jGvfFFdbyRLKxiuL">
+                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854236?hash=hwXv7ikhU8zKDZ5uD8Mo1LNu0KERZJc3Cxn15bIOt9H&dl=1NSuL87A0ZS0x75lR7uyvxVKWz6jGvfFFdbyRLKxiuL" class="link-design">
                             LITE VERSION</a>(Базовая версия с простым функционалом)</li>
-                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854452?hash=vDycWj08hXTyJTj1Z0GlwWBGO06pDfbCNV6Xas6ACxT&dl=0oBmISCFZ77ot3p4CdsMFUuKOpZTsV8nxfmKzizMOOo">
+                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854452?hash=vDycWj08hXTyJTj1Z0GlwWBGO06pDfbCNV6Xas6ACxT&dl=0oBmISCFZ77ot3p4CdsMFUuKOpZTsV8nxfmKzizMOOo" class="link-design">
                             2 PRO VERSION</a>(Простая версия + Дашборд с диаграммами, позволяющий просматривать динамику доходов и расходов)</li>
-                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854405?hash=CEwREmKzsP2CtEiQ7wlylZa7t4daEEZzrdog78u5s5T&dl=5t1pzfK7bubEVh4HPUoKhzOzy9oNiykXHpuXRIsB6G4">
+                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854405?hash=CEwREmKzsP2CtEiQ7wlylZa7t4daEEZzrdog78u5s5T&dl=5t1pzfK7bubEVh4HPUoKhzOzy9oNiykXHpuXRIsB6G4" class="link-design">
                             3 PRO VERSION + BUSINESS</a>(ПРО версия + Модификация под ведение микробизнеса)</li>
                     </ul>
-                <p>*Обратную связь по продуктам можете оставить <a href="https://vk.com/feedback_app?mid=-215415663">здесь</a></p>
+                <p>*Обратную связь по продуктам можете оставить <a href="https://vk.com/feedback_app?mid=-215415663" class="link-design">здесь</a></p>
             </div>
-        </main>
+        </main> 
         <footer id="site_footer"></footer>
-        </div>
     </body>
     <script>$("#site_header").load("based_header.html");</script>
     <script>$("#site_footer").load("based_footer.html");</script>
