--- a/my_history.html
+++ b/my_history.html
@@ -11,7 +11,6 @@
         <title>My_history</title>
     </head>
     <body>
-        <div class="background-design">
         <div id="site_header"></div>
         <main>
             <div class="block-container">
@@ -111,7 +110,7 @@
                     верить в себя и работать в нужном направлении!
                     </p>
 
-                    <figure class="figure picture-on-center">
+                    <figure class="figure picture-on-center caption-shadow">
                         <img src="static/img/ShkolnikNagrada1-7.jpg" alt="#" height="460px" width="880px">
                         <figcaption>
                             Это всё - заслуга одного очень
@@ -148,7 +147,7 @@
                             сожалению, пришлось попрощаться со стенами родной Гимназии и
                             на время уйти из бизнеса…</p>
                         </div>
-                        <figure class="indentation_element">
+                        <figure class="indentation_element caption-shadow">
                             <img src="static/img/FirstCompetitions.jpg" class="vertical-alignment-img" alt="#" height="450px" width="400px">
                             <figcaption>Первый турнир...</figcaption>
                         </figure>
@@ -170,7 +169,7 @@
                     ростом не вышел! Но продолжал играть несмотря ни на что,
                     некоторые шансы бывают только раз в жизни)</p>
 
-                    <figure class="figure">
+                    <figure class="figure caption-shadow">
                         <img src="static/img/CoolGuys.jpg" alt="#" height="460px" width="920px">
                         <figcaption>
                             Привет, мои 170 см…Вы ещё не видели, как
@@ -224,7 +223,6 @@
             </div>
         </main>
         <footer id="site_footer"></footer>
-        </div>
     </body>
     <script>$("#site_header").load("based_header.html");</script>
     <script>$("#site_footer").load("based_footer.html");</script>
