--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
         <title>Home</title>
     </head>
     <body>
-        <div class="background-design">
         <div id="site_header"></div>
         <main>
             <div class="block-container">
@@ -32,20 +31,19 @@
 
             <div class="block_container">
                 <h3>Вконтакте</h3>
-                <div class="flexible_container">
-                    <img src="static/img/VkBlogs.jpg" alt="Блоги в вк" height="400px" width="600px">
-                    <div class="indentation_element">
+                <div>
+                    <img src="static/img/VkBlogs.jpg" class="picture-on-center" alt="Блоги в вк" height="420px" width="640px">
+                    <div>
                         <p>В VK у меня всего 3 блога:</p>
-                        <ul class="blogs_list">
-                            <li class="blogs_list_item">💵<a href="https://vk.com/lifeandbzns">Основной</a> (про бизнес и саморазвитие)</li>
-                            <li class="blogs_list_item">🎹<a href="https://vk.com/bandwprince">Музыкальный</a> (о моей фортепианной карьере)</li>
-                            <li>🏀<a href="https://vk.com/bballmovement">Баскетбольный</a> (клуб настоящих боллеров)</li>
+                        <ul class="blogs_list useful_links">
+                            <li class="blogs_list_item">💵<a href="https://vk.com/lifeandbzns" class="link-design">Основной</a> (про бизнес и саморазвитие)</li>
+                            <li class="blogs_list_item">🎹<a href="https://vk.com/bandwprince" class="link-design">Музыкальный</a> (о моей фортепианной карьере)</li>
+                            <li class="blogs_list_item">🏀<a href="https://vk.com/bballmovement" class="link-design">Баскетбольный</a> (клуб настоящих боллеров)</li>
                         </ul>
                         <p>
                         Каждый отражает отдельную частичку моей жизни и показывает всё без розовых очков (успешного успеха не будет, уверяю вас😜)</p>
                         <p>Считаю, что благодаря такому подходу я могу показать людям лишь то, что им действительно важно и нужно!!!</p>
-                        <p>Не всем допустим интересен бизнес или баскетбол…
-                        </p>
+                        <p>Не всем допустим интересен бизнес или баскетбол...</p>
                     </div>
                 </div>
             </div>
@@ -57,11 +55,11 @@
                         <p>Блог о жизни (связанный с Основным из ВК)</p>
                         <p>Здесь публикую более эксклюзивную информацию о типичных
                         бытовых вопросах и всевозможных передрягах</p>
-                        <p>Экспертных и познавательных постов <a href="https://t.me/lifeandbzns">тут</a> немного...</p>
+                        <p>Экспертных и познавательных постов <a href="https://t.me/lifeandbzns" class="link-design">тут</a> немного...</p>
                     </div>
                     <div class="right-container">
                         <h3>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h3>
-                        <p><a href="https://vk.com/littlemachine">Моя жизнь в красках...</a></p>
+                        <p><a href="https://vk.com/littlemachine" class="link-design">Моя жизнь в красках...</a></p>
                         <p>ОСТОРОЖНО</p>
                         <p>Никакой полезной информации…только фото и видео контент</p>
                     </div>
@@ -78,7 +76,6 @@
             <p class="bold-text">На этом, собственно, всё! Выбирайте интересные Вам направления и добро пожаловать в мой мир...</p>
         </main>
         <div id="site_footer"></div>
-        </div>
     </body>
     <script>$("#site_header").load("based_header.html");</script>
     <script>$("#site_footer").load("based_footer.html");</script>
