--- a/blogs.html
+++ b/blogs.html
@@ -13,18 +13,18 @@
     <body>
         <div id="site_header"></div>
         <main>
+            <h2>Мои Блоги</h2>
             <div class="block_container">
-                <h2>Мои болги</h2>
-                <img src="static/img/StructureBlogs.jpg" alt="" class="picture-on-center" width="800px" height="450px">
+                <img src="static/img/cats1.jpg" alt="#" width="100%" height="500px">
             </div>
+            <h2>Тематика</h2>
             <div class="block_container">
-                <h3>Тематика:</h3>
-                <ul class="blogs_list useful_links">
-                    <li><a href="https://vk.com/lifeandbzns" class="link-design">Илюха | Жизнь и бизнес</a></li>
-                    <li><a href="https://vk.com/bandwprince" class="link-design">Илюха | Чёрно-белый принц</a></li>
-                    <li><a href="https://vk.com/bballmovement" class="link-design">Илюха | Баскетбольный движ</a></li>
-                    <li><a href="https://vk.com/littlemachine" class="link-design">Личная страница </a></li>
-                    <li><a href="https://t.me/lifeandbzns" class="link-design">Эксклюзивный телеграм</a></li>
+                <ul>
+                    <li><a href="https://vk.com/lifeandbzns">💵Илюха | Жизнь и бизнес</a></li>
+                    <li><a href="https://vk.com/bandwprince">🎹Илюха | Чёрно-белый принц</a></li>
+                    <li><a href="https://vk.com/bballmovement">Илюха | Баскетбольный движ</a></li>
+                    <li><a href="https://vk.com/littlemachine">Личная страница</a></li>
+                    <li><a href="https://t.me/lifeandbzns">Эксклюзивный телеграм</a></li>
                 </ul>
             </div>
         </main>
