--- a/bonuses.html
+++ b/bonuses.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
@@ -13,26 +14,24 @@
     <body>
         <div id="site_header"></div>
         <main>
-            <div class="block-container">
-                <h2>Бонусы</h2>
-                <p>Понимая, как все любят бесплатные гайды, подборки и подарки, сделал для 
-                Вас специальную страничку с бонусами!</p>
-                <p>Пользуйтесь</p>
-                <p>✅2 WORD-ФАЙЛА:</p>
-                <ul class="useful_links">
-                    <li class="useful_link"><a href="https://vk.com/doc194326000_666854255?hash=u4ic3kDHKOHo5ALDuWxd61C8mNxQIoRso3qBeVb24OP&dl=1MXYUB3kcAR0tKywGUZEB6iL0aiXpMWY2oQz989J0mT" class="link-design">Как начать бизнес с 0</a></li>
-                    <li class="useful_link"><a href="https://vk.com/doc194326000_666854256?hash=DOilSNKeqnQ8kYmNZQoPoxaidLOZl2EEE06IiXyZs3T&dl=kSLckSUr6rzfY4l1zPWzWZzsJjQT4exxDYzdqhU8ZCL" class="link-design">Как начать инвестировать</a></li>
-                </ul> 
-                <p>✅ТАБЛИЦА "ЛИЧНЫЙ БЮДЖЕТ" 3 ВЕРСИИ:</p>
-                    <ul class="useful_links ">
-                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854236?hash=hwXv7ikhU8zKDZ5uD8Mo1LNu0KERZJc3Cxn15bIOt9H&dl=1NSuL87A0ZS0x75lR7uyvxVKWz6jGvfFFdbyRLKxiuL" class="link-design">
-                            LITE VERSION</a>(Базовая версия с простым функционалом)</li>
-                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854452?hash=vDycWj08hXTyJTj1Z0GlwWBGO06pDfbCNV6Xas6ACxT&dl=0oBmISCFZ77ot3p4CdsMFUuKOpZTsV8nxfmKzizMOOo" class="link-design">
-                            2 PRO VERSION</a>(Простая версия + Дашборд с диаграммами, позволяющий просматривать динамику доходов и расходов)</li>
-                        <li class="useful_link"><a href="https://vk.com/doc194326000_666854405?hash=CEwREmKzsP2CtEiQ7wlylZa7t4daEEZzrdog78u5s5T&dl=5t1pzfK7bubEVh4HPUoKhzOzy9oNiykXHpuXRIsB6G4" class="link-design">
-                            3 PRO VERSION + BUSINESS</a>(ПРО версия + Модификация под ведение микробизнеса)</li>
-                    </ul>
-                <p>*Обратную связь по продуктам можете оставить <a href="https://vk.com/feedback_app?mid=-215415663" class="link-design">здесь</a></p>
+            <h2>Подарки</h2>
+            <div class="block_container">
+                <p>Понимая, как все любят бесплатные гайды, подборки и подарки, сделал для Вас специальную страничку с бонусами!
+                    Пользуйтесь</p>
+            </div>
+            <div class="centarl-text-elem-container"><p class="bold-text central-text-elem">✅2 WORD-ФАЙЛА:</p></div>
+            <div class="block_container flexible_container">
+                <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px">
+                <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px">
+            </div>
+            <div class="centarl-text-elem-container"><p class="bold-text central-text-elem">✅ТАБЛИЦА "ЛИЧНЫЙ БЮДЖЕТ" 3 ВЕРСИИ:</p></div>
+            <div class="block_container flexible_container">
+                <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px">
+                <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px" class="center-img">
+                <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px">
+            </div>
+            <div class="block_container">
+                <p style="text-align: center;">*Обратную связь по продуктам можете оставить <a href="#">здесь</a></p>
             </div>
         </main> 
         <footer id="site_footer"></footer>
