--- a/shops.html
+++ b/shops.html
@@ -13,16 +13,27 @@
     <body>
         <div id="site_header"></div>
         <main>
+            <h2>Магазины</h2>
             <div class="block_container">
-                <h2>Магазины</h2>
-                <p>Здесь вы можете ознакомиться с моими Интернет-магазинами, а также 
-                    приобрести интересующие товары или мерч:</p>
-                <ul class="useful_links ">
-                    <li class="useful_link"><a href="https://vk.com/lionstoys" class="link-design">Магазин игрушек</a></li>
-                    <li class="useful_link"><a href="https://vk.com/lionsbricks" class="link-design">Магазин конструкторов</a></li>
-                </ul>
-                <p>Мерч: В разработке...</p>
-                <p>Нотный маркетплейс: В разработке...</p>
+                <p>Здесь вы можете ознакомиться с моими Интернет-магазинами, а также приобрести интересующие товары или мерч:</p>
+            </div>
+            <div class="block_container flexible_container flexible-wrap">
+                <figure>
+                    <figcaption>Магазин игрушек</figcaption>
+                    <img src="static/img/cats1.jpg" alt="#" width="400px" height="400px">
+                </figure>
+                <figure>
+                    <figcaption>Магазин конструкторов</figcaption>
+                    <img src="static/img/cats2.jpg" alt="#" width="400px" height="400px">
+                </figure>
+                <figure>
+                    <img src="static/img/cats3.jpg" alt="#" width="400px" height="400px">
+                    <figcaption>Мерч</figcaption>
+                </figure>
+                <figure>
+                    <img src="static/img/cats4.jpg" alt="#" width="400px" height="400px">
+                    <figcaption>Нотный маркетплейс</figcaption>
+                </figure>
             </div>
         </main>
         <footer id="site_footer"></footer>
