--- a/based_header.html
+++ b/based_header.html
@@ -1,4 +1,3 @@
-
 <header class="header">
     <div class="logo">
         <h1 class="site-title"><a>Илюха</a></h1>
@@ -10,7 +9,7 @@
                 <a href="home.html" class="nav_link">Главная</a>
             </li>
             <li class="nav_item">
-                <a href="my_history.html" class="nav_link">Обо мне</a>
+                <a href="about_me.html" class="nav_link">Обо мне</a>
             </li>
             <li class="nav_item">
                 <a href="blogs.html" class="nav_link">Блоги</a>
