--- a/home.html
+++ b/home.html
@@ -13,67 +13,77 @@
     <body>
         <div id="site_header"></div>
         <main>
-            <div class="block-container">
-                <h2>Сеть блогов</h2>
-                <h3>Привет, меня зовут Илюха!</h3>
-                <p>
-                Я предприниматель, блогер и просто медийная личность. <br>
-                За свою жизнь я уже многое перепробовал и нашёл истинное
-                призвание! Решил, что глупо молчать о об этом. <br>
-                Так я создал свою сеть блогов, в которой делюсь наработками, инсайтами и просто удивительным лайфстайлом! <br>
-                Благодаря своей чёткой структуре каждый сможет найти в ней что-то для себя и своих интересов. <br>
-                Ну всё... Хватит предисловий...
-                </p>
-                <h2>Хочу представить Вам свою сеть блогов</h2>
-            </div>
-
-            <div class="vk_reels"><iframe class="link_vk_reels" src="https://vk.com/video_ext.php?oid=-215415663&id=456239034&hash=7b15a6c8968f85a3" width="333" height="660" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe></div>
-
+            <h2>Привет, меня зовут Илюха</h2>
             <div class="block_container">
-                <h3>Вконтакте</h3>
-                <div>
-                    <img src="static/img/VkBlogs.jpg" class="picture-on-center" alt="Блоги в вк" height="420px" width="640px">
-                    <div>
-                        <p>В VK у меня всего 3 блога:</p>
-                        <ul class="blogs_list useful_links">
-                            <li class="blogs_list_item">💵<a href="https://vk.com/lifeandbzns" class="link-design">Основной</a> (про бизнес и саморазвитие)</li>
-                            <li class="blogs_list_item">🎹<a href="https://vk.com/bandwprince" class="link-design">Музыкальный</a> (о моей фортепианной карьере)</li>
-                            <li class="blogs_list_item">🏀<a href="https://vk.com/bballmovement" class="link-design">Баскетбольный</a> (клуб настоящих боллеров)</li>
-                        </ul>
-                        <p>
-                        Каждый отражает отдельную частичку моей жизни и показывает всё без розовых очков (успешного успеха не будет, уверяю вас😜)</p>
-                        <p>Считаю, что благодаря такому подходу я могу показать людям лишь то, что им действительно важно и нужно!!!</p>
-                        <p>Не всем допустим интересен бизнес или баскетбол...</p>
-                    </div>
-                </div>
+                <p>Я предприниматель, блогер и просто медийная личность.</p>
+                <p>За свою жизнь я уже многое перепробовал и нашёл истинное призвание! Решил, что глупо молчать о об этом.</p>
+                <p>Более подробно обо мне и моём становлении можете прочитать <a href="#">тут</a></p>
             </div>
-
             <div class="block_container">
-                <div class="flexible_container expansion">
-                    <div class="left-container">
-                        <h3>Телеграм</h3>
-                        <p>Блог о жизни (связанный с Основным из ВК)</p>
-                        <p>Здесь публикую более эксклюзивную информацию о типичных
-                        бытовых вопросах и всевозможных передрягах</p>
-                        <p>Экспертных и познавательных постов <a href="https://t.me/lifeandbzns" class="link-design">тут</a> немного...</p>
-                    </div>
-                    <div class="right-container">
-                        <h3>Ну и, конечно, ЛИЧНАЯ СТРАНИЦА:</h3>
-                        <p><a href="https://vk.com/littlemachine" class="link-design">Моя жизнь в красках...</a></p>
-                        <p>ОСТОРОЖНО</p>
-                        <p>Никакой полезной информации…только фото и видео контент</p>
-                    </div>
+                <img src="static/img/cats1.jpg" width="100%" height="500px" alt="#">
+            </div>
+            <div class="block_container">
+                <p>Так я создал свою сеть блогов, в которой делюсь наработками, инсайтами и просто удивительным лайфстайлом!</p>
+                <p>Благодаря своей чёткой структуре каждый сможет найти в ней что-то для себя и своих интересов</p>
+                <p>Ну всё…Хватит предисловий..</p>
+            </div>
+            <h2>Хочу представить вам свою Сеть Блогов</h2>
+            <div class="block_container">
+                <video src="static/video/Ekran_1.mp4" width="100%" controls></video>
+            </div>
+            <h3>Вконтакте</h3>
+            <div class="block_container">
+                <img src="static/img/VkBlogs.jpg" alt="#" width="100%">
+            </div>
+            <div class="block_container">
+                <p>В VK у меня всего 3 блога:</p>
+                <ul>
+                    <li><a href="https://vk.com/lifeandbzns">💵Основной (про бизнес и саморазвитие)</a></li>
+                    <li><a href="https://vk.com/bandwprince">🎹Музыкальный (о моей фортепианной карьере)</a></li>
+                    <li><a href="https://vk.com/bballmovement">🏀Баскетбольный (клуб настоящих боллеров)</a></li>
+                </ul>
+            </div>
+            <div class="block_container" >
+                <p>Каждый отражает отдельную частичку моей жизни и показывает всё без розовых очков (успешного успеха не будет, уверяю Вас)</p>
+                <p>Считаю, что благодаря такому подходу я могу показать людям лишь то, что им действительно важно и нужно!!!</p>
+                <p>Не всем допустим интересен бизнес или баскетбол...</p>
+            </div>
+            <div class="block_container flexible_container">
+                <img src="static/img/TelegramBlogImg.jpg" alt="#" height="400px">
+                <div class="indentation_element">
+                    <h3>Телеграм</h3>
+                    <p>Блог о жизни (связанный с Основным из ВК)</p>
+                    <p>Здесь публикую более эксклюзивную информацию о <br>типичных бытовых вопросах и всевозможных передрягах</p>
+                    <p>Экспертных и познавательных постов тут немного... <a href="https://t.me/lifeandbzns">https://t.me/lifeandbzns</a></p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Enim ut sem viverra aliquet eget sit amet tellus cras. 
+                        Et malesuada fames ac turpis. Sapien eget mi proin sed libero enim sed faucibus. Nisi vitae suscipit tellus mauris a. 
+                        Sed tempus urna et pharetra pharetra massa massa ultricies mi. Velit egestas dui id ornare. 
+                        Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. 
+                        Adipiscing elit ut aliquam purus sit. Mi sit amet mauris commodo quis imperdiet massa tincidunt.</p>
                 </div>
-                <div class="flexible_container expansion">
-                    <div class="left-container">
-                        <img src="static/img/TelegramBlogImg.jpg" alt="Мой блог в telegram" height="550px" width="450px">
-                    </div>
-                    <div class="right-container">
-                        <img src="static/img/MyVkImg.jpg" alt="Личная страница вк" height="550px" width="450px">
-                    </div>
+            </div>  
+            <div class="block_container flexible_container">
+                <img src="static/img/MyVkImg.jpg" alt="#" height="400px">
+                <div class="indentation_element">
+                    <h3>Ну и, конечно, Личная Страница</h3>
+                    <p>Моя жизнь в красках... <a href="https://vk.com/littlemachine">https://vk.com/littlemachine</a></p>
+                    <p>⛔ОСТОРОЖНО⛔</p>
+                    <p>Никакой полезной информации... только фото и видео контент</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Enim ut sem viverra aliquet eget sit amet tellus cras. 
+                        Et malesuada fames ac turpis. Sapien eget mi proin sed libero enim sed faucibus. Nisi vitae suscipit tellus mauris a. 
+                        Sed tempus urna et pharetra pharetra massa massa ultricies mi. Velit egestas dui id ornare. 
+                        Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. 
+                        Adipiscing elit ut aliquam purus sit. Mi sit amet mauris commodo quis imperdiet massa tincidunt. 
+                       </p>
                 </div>
             </div>
-            <p class="bold-text">На этом, собственно, всё! Выбирайте интересные Вам направления и добро пожаловать в мой мир...</p>
+            <div class="block_container">
+                <p class="parting-words">На этом, собственно, всё! Выбирайте интересные Вам направления и добро пожаловать в мой мир...</p>
+            </div>
         </main>
         <div id="site_footer"></div>
     </body>
