--- a/about_me.html
+++ b/about_me.html
@@ -37,9 +37,9 @@
             </div>
             <h2>Моя жизнь</h2>
             <div class="block_container flexible_container">
-                <div style="margin-right: 7%">
-                    <h3 style="text-align: center;">Раннее детство</h3>
-                    <p style="margin-bottom: 60px;">Родился я 30 июля 2005 года в небольшом городке «Сыктывкар»
+                <div class="temporary-formatting-4">
+                    <h3 class="temporary-formatting-2">Раннее детство</h3>
+                    <p class="temporary-formatting-1">Родился я 30 июля 2005 года в небольшом городке «Сыктывкар»
                     (Столица республики Коми) с населением порядка 200 000 +
                     человек. Раннее детство провёл в деревне «Визябож», позже
                     ставшей родной, но вот потом...Понеслась...
@@ -47,8 +47,8 @@
                     <img src="static/img/EarlyChildhood.jpg" alt="#" height="400px" width="400px">
                 </div>
                 <div>
-                    <h3 style="text-align: center;">Детский сад</h3>
-                    <p style="margin-bottom: 15px;">Путешествия по разным городам, странам. Год там, год сям. Жизнь
+                    <h3 class="temporary-formatting-2">Детский сад</h3>
+                    <p class="temporary-formatting-3">Путешествия по разным городам, странам. Год там, год сям. Жизнь
                     в Финляндии, Чехии, Светогорске…И наконец снова занесло в
                     родные края (родители решили остаться там, где родились, ну а я,
                     собственно, не выбирал где жить😐). Отдали в обычный городской
