--- a/bonuses.html
+++ b/bonuses.html
@@ -21,7 +21,7 @@
             </div>
             <div class="centarl-text-elem-container"><p class="bold-text central-text-elem">✅2 WORD-ФАЙЛА:</p></div>
             <div class="block_container flexible_container">
-                <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px">
+                <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px"> <!--250/400-->
                 <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px">
             </div>
             <div class="centarl-text-elem-container"><p class="bold-text central-text-elem">✅ТАБЛИЦА "ЛИЧНЫЙ БЮДЖЕТ" 3 ВЕРСИИ:</p></div>
@@ -31,7 +31,7 @@
                 <img src="static/img/cats4.jpg" alt="#" width="350px" height="500px">
             </div>
             <div class="block_container">
-                <p style="text-align: center;">*Обратную связь по продуктам можете оставить <a href="#">здесь</a></p>
+                <p class="temporary-formatting-2">*Обратную связь по продуктам можете оставить <a href="#">здесь</a></p>
             </div>
         </main> 
         <footer id="site_footer"></footer>
