--- a/shops.html
+++ b/shops.html
@@ -20,18 +20,18 @@
             <div class="block_container flexible_container flexible-wrap">
                 <figure>
                     <figcaption>Магазин игрушек</figcaption>
-                    <img src="static/img/cats1.jpg" alt="#" width="400px" height="400px">
+                    <img src="static/img/LionsToys.jpg" alt="#" width="400px" height="400px">
                 </figure>
                 <figure>
                     <figcaption>Магазин конструкторов</figcaption>
-                    <img src="static/img/cats2.jpg" alt="#" width="400px" height="400px">
+                    <img src="static/img/LionsBriks.jpg" alt="#" width="400px" height="400px">
                 </figure>
                 <figure>
-                    <img src="static/img/cats3.jpg" alt="#" width="400px" height="400px">
+                    <img src="static/img/InDevelopment.jpg" alt="#" width="400px" height="400px">
                     <figcaption>Мерч</figcaption>
                 </figure>
                 <figure>
-                    <img src="static/img/cats4.jpg" alt="#" width="400px" height="400px">
+                    <img src="static/img/InDevelopment.jpg" alt="#" width="400px" height="400px">
                     <figcaption>Нотный маркетплейс</figcaption>
                 </figure>
             </div>
