--- a/blogs.html
+++ b/blogs.html
@@ -15,16 +15,16 @@
         <main>
             <h2>Мои Блоги</h2>
             <div class="block_container">
-                <img src="static/img/cats1.jpg" alt="#" width="100%" height="500px">
+                <img src="static/img/StructureBlogs.jpg" alt="#" width="100%" height="500px">
             </div>
             <h2>Тематика</h2>
-            <div class="block_container">
-                <ul>
-                    <li><a href="https://vk.com/lifeandbzns">💵Илюха | Жизнь и бизнес</a></li>
-                    <li><a href="https://vk.com/bandwprince">🎹Илюха | Чёрно-белый принц</a></li>
-                    <li><a href="https://vk.com/bballmovement">Илюха | Баскетбольный движ</a></li>
-                    <li><a href="https://vk.com/littlemachine">Личная страница</a></li>
-                    <li><a href="https://t.me/lifeandbzns">Эксклюзивный телеграм</a></li>
+            <div class="bloz_container">
+                <ul class="blog-list">
+                    <li class="blogs-elem-1"><a href="https://vk.com/lifeandbzns">💵Илюха | Жизнь и бизнес</a></li>
+                    <li class="blogs-elem-2"><a href="https://vk.com/bandwprince">🎹Илюха | Чёрно-белый принц</a></li>
+                    <li class="blogs-elem-3"><a href="https://vk.com/bballmovement">Илюха | Баскетбольный движ</a></li>
+                    <li class="blogs-elem-4"><a href="https://vk.com/littlemachine">Личная страница</a></li>
+                    <li class="blogs-elem-5"><a href="https://t.me/lifeandbzns">Эксклюзивный телеграм</a></li>
                 </ul>
             </div>
         </main>
