--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
                 <p>Более подробно обо мне и моём становлении можете прочитать <a href="#">тут</a></p>
             </div>
             <div class="block_container">
-                <img src="static/img/cats1.jpg" width="100%" height="500px" alt="#">
+                <img src="static/img/WhoAmI.jpg" width="100%" height="500px" alt="#">
             </div>
             <div class="block_container">
                 <p>Так я создал свою сеть блогов, в которой делюсь наработками, инсайтами и просто удивительным лайфстайлом!</p>
@@ -57,11 +57,11 @@
                     <p>Экспертных и познавательных постов тут немного... <a href="https://t.me/lifeandbzns">https://t.me/lifeandbzns</a></p>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. *<!--Enim ut sem viverra aliquet eget sit amet tellus cras. 
+                        Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Enim ut sem viverra aliquet eget sit amet tellus cras. 
                         Et malesuada fames ac turpis. Sapien eget mi proin sed libero enim sed faucibus. Nisi vitae suscipit tellus mauris a. 
                         Sed tempus urna et pharetra pharetra massa massa ultricies mi. Velit egestas dui id ornare. 
                         Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. 
-                        Adipiscing elit ut aliquam purus sit. Mi sit amet mauris commodo quis imperdiet massa tincidunt.--></p>
+                        Adipiscing elit ut aliquam purus sit. Mi sit amet mauris commodo quis imperdiet massa tincidunt.</p>
                 </div>
             </div>  
             <div class="block_container flexible_container">
@@ -73,11 +73,11 @@
                     <p>Никакой полезной информации... только фото и видео контент</p>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. <!--Enim ut sem viverra aliquet eget sit amet tellus cras. 
+                        Fermentum odio eu feugiat pretium nibh ipsum consequat nisl. Enim ut sem viverra aliquet eget sit amet tellus cras. 
                         Et malesuada fames ac turpis. Sapien eget mi proin sed libero enim sed faucibus. Nisi vitae suscipit tellus mauris a. 
                         Sed tempus urna et pharetra pharetra massa massa ultricies mi. Velit egestas dui id ornare. 
                         Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. 
-                        Adipiscing elit ut aliquam purus sit. Mi sit amet mauris commodo quis imperdiet massa tincidunt. -->
+                        Adipiscing elit ut aliquam purus sit. Mi sit amet mauris commodo quis imperdiet massa tincidunt. 
                        </p>
                 </div>
             </div>
